.kubernetes/dev/auth-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: dev
spec:
  serviceName: auth-db-service
  replicas: 1 
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -p
                - "5432"
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -p
                - "5432"
                - -U
                - postgres
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: auth-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
  namespace: dev
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: auth-db
  clusterIP: None
