.kubernetes/dev/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: https
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: management
