.kubernetes/dev/auth.deployment-old.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: dev
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: keycloak
          image: bitnami/keycloak:21
          ports:
            - containerPort: 8080
            - containerPort: 8443
          readinessProbe: 
            httpGet:
              path: /realms/master 
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
