.kubernetes/dev/auth.deployment-old2.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-discovery
  namespace: dev
  labels:
    app: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  publishNotReadyAddresses: true
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  namespace: dev
  labels:
    app: keycloak
  annotations:
    networking.gke.io/proven-destination: "false"
    networking.gke.io/healthcheck: |
      {
        "requestPath": "/health/ready",
        "port": 9000
      }
spec:
  serviceName: keycloak-discovery
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 12
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: 9000
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   failureThreshold: 12
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: 9000
          #   initialDelaySeconds: 60
          #   periodSeconds: 30
          #   failureThreshold: 12
