.kubernetes/dev/auth.deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: dev
spec:
  serviceName: auth-db-service
  replicas: 1 
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -p
                - "5432"
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -p
                - "5432"
                - -U
                - postgres
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: auth-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
  namespace: dev
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: auth-db
  clusterIP: None
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: dev
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: keycloak
          image: bitnami/keycloak:21
          ports:
            - containerPort: 8080
            - containerPort: 8443
          readinessProbe: # Sprawdzanie gotowosci Keycloak
            httpGet:
              path: /realms/master # Zmien na sciezke Twojego realm'a, jesli masz inny
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe: # Sprawdzanie zycia Keycloak
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
spec:
  selector:
    app: auth # Selektor musi pasowac do Deploymentu Keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080 # Port HTTP Keycloak w kontenerze
    - name: https
      port: 443
      targetPort: 8443 # Port HTTPS Keycloak w kontenerze (jesli uzywasz)
