.kubernetes/dev/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless-service
  namespace: dev
  labels:
    app: keycloak
spec:
  clusterIP: None # This makes it a Headless Service [25]
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 7600 # JGroups port for cluster communication
      targetPort: 7600
      name: jgroups
