.kubernetes/dev/hello.service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: dev
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
