.kubernetes/dev/kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: dev
spec:
  serviceName: headless-kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
        - name: kafka
          image: bitnami/kafka:3.7
          ports:
            - name: kafka
              containerPort: 9092
            - name: internal
              containerPort: 19092
            - name: controller
              containerPort: 9093
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: headless-kafka-service
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: internal
      port: 19092
      targetPort: 19092
    - name: controller
      port: 9093
      targetPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: dev
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: internal
      port: 19092
      targetPort: 19092
    - name: controller
      port: 9093
      targetPort: 9093
