.kubernetes/dev/mongo-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-ui
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-ui
  template:
    metadata:
      labels:
        app: mongo-ui
    spec:
      containers:
        - name: mongo-ui
          image: mongo-express:1.0.2-20
          ports:
            - name: mongo-ui
              containerPort: 8081
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - 'nc -z localhost 8081'
            initialDelaySeconds: 10
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-ui-service
  namespace: dev
spec:
  selector:
    app: mongo-ui
  ports:
    - name: mongo-ui
      port: 80
      targetPort: 8081
