.kubernetes/dev/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-mongo-service
  namespace: dev
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: dev
spec:
  serviceName: headless-mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        rel: dev
    spec:
      containers:
        - name: mongo
          image: mongo:8
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
        labels:
          app: mongo
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: dev
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
