.kubernetes/dev/synthesizer.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synthesizer
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synthesizer
  template:
    metadata:
      labels:
        app: synthesizer
    spec:
      containers:
        - name: synthesizer
          image: ghcr.io/dawidbladek0831/synthesizer:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: synthesizer-service
  namespace: dev
spec:
  selector:
    app: synthesizer
  ports:
    - name: http
      port: 80
      targetPort: 80
