.kubernetes/dev/auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: dev
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: bitnami/keycloak:21
          ports:
            - containerPort: 8080
            - containerPort: 8443
          readinessProbe: # Sprawdzanie gotowosci Keycloak
            httpGet:
              path: /realms/master # Zmien na sciezke Twojego realm'a, jesli masz inny
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe: # Sprawdzanie zycia Keycloak
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: dev
spec:
  selector:
    app: keycloak # Selektor musi pasowac do Deploymentu Keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080 # Port HTTP Keycloak w kontenerze
    - name: https
      port: 443
      targetPort: 8443 # Port HTTPS Keycloak w kontenerze (jesli uzywasz)
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: dev
  labels:
    shared-gateway-access: "true"
spec:
  parentRefs:
  - name: shared-gateway
    namespace: shared
  hostnames:
  - "devkeycloak.dawidbladek0831.org"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 80
