.kubernetes/dev/dev.route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dev-route
  namespace: dev
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared
  hostnames:
    - "devf19.dawidbladek0831.org"
  rules:
    - backendRefs:
        - name: front-service
          port: 80
