.kubernetes/dev/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: dev
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared
      sectionName: https-dev
  hostnames:
    - "auth.dev.dawidbladek0831.org"
  rules:
    - matches:
      backendRefs:
        - name: auth-service
          port: 8080

# ---

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: mongo-ui-route
#   namespace: dev
# spec:
#   parentRefs:
#     - name: shared-gateway
#       namespace: shared
#   hostnames:
#     - "mongo.dev.dawidbladek0831.org"
#   rules:
#     - matches:
#       - path:
#           type: PathPrefix
#           value: /
#       backendRefs:
#         - name: mongo-ui-service
#           port: 80
# ---

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: kafka-ui-route
#   namespace: dev
# spec:
#   parentRefs:
#     - name: shared-gateway
#       namespace: shared
#   hostnames:
#     - "kafka.dev.dawidbladek0831.org"
#   rules:
#     - backendRefs:
#         - name: kafka-ui-service
#           port: 80
